# quantum_hall

./: Makefile  Makefile.in  README.md  config.status  configure  configure.ac  quantum_hall_conf
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
documentation/: algebra_8cpp.html  algebra_8cpp.js  algebra_8cpp_source.html  algebra_8h.html  algebra_8h.js  algebra_8h_source.html  algebra_8hpp.html  algebra_8hpp.js  algebra_8hpp_source.html  analyse__monte__carlo_8cpp.html  analyse__monte__carlo_8cpp.js  analyse__monte__carlo_8cpp_source.html  annotated.html  annotated.js  beta_8cpp.html  beta_8cpp.js  beta_8cpp_source.html  binary__number__tools_8cpp.html  binary__number__tools_8cpp.js  binary__number__tools_8cpp_source.html  binary__number__tools_8h.html  binary__number__tools_8h.js  binary__number__tools_8h_source.html  binary__number__tools_8hpp.html  binary__number__tools_8hpp.js  binary__number__tools_8hpp_source.html  binomial__table_8cpp.html  binomial__table_8cpp.js  binomial__table_8cpp_source.html  binomial__table_8h.html  binomial__table_8h.js  binomial__table_8h_source.html  (+739 more)
src/: Makefile  Makefile.am  Makefile.in
src/documentation/: main_page_documentation.h
src/fqhe_entanglement_energy_method/entanglement_energy_model/: entanglement_energy_model.cpp  entanglement_energy_model.hpp
src/fqhe_entanglement_energy_method/entanglement_energy_model/.deps/: entanglement_energy_model.Po
src/fqhe_entanglement_energy_method/main/: fqhe_entanglement_energy.cpp
src/fqhe_entanglement_energy_method/main/.deps/: fqhe_entanglement_energy.Po
src/fqhe_entanglement_hamiltonian_method/entanglement_hamiltonian/: hilbert.cpp  hilbert.hpp  list_of_terms.cpp  list_of_terms.hpp  term.cpp  term.hpp
src/fqhe_entanglement_hamiltonian_method/entanglement_hamiltonian/.deps/: hilbert.Po  list_of_terms.Po  term.Po
src/fqhe_entanglement_hamiltonian_method/main/: fqhe_entanglement_hamiltonian.cpp
src/fqhe_entanglement_hamiltonian_method/main/.deps/: fqhe_entanglement_hamiltonian.Po
src/fqhe_entanglement_wave_function_method/algebra/: algebra.cpp  algebra.hpp  beta.cpp  deter.cpp  deter.hpp  determinant.hpp  gamma.cpp
src/fqhe_entanglement_wave_function_method/algebra/.deps/: algebra.Po  beta.Po  deter.Po  gamma.Po
src/fqhe_entanglement_wave_function_method/gnuplot/.deps/: gnuplot_i.Po
src/fqhe_entanglement_wave_function_method/hilbert_ewf/: hilbert_ewf.cpp  hilbert_ewf.hpp
src/fqhe_entanglement_wave_function_method/hilbert_ewf/.deps/: hilbert_ewf.Po
src/fqhe_entanglement_wave_function_method/main/: entanglement_wave_function.cpp
src/fqhe_entanglement_wave_function_method/main/.deps/: entanglement_wave_function.Po
src/fqhe_entanglement_wave_function_method/metropolis/: metropolis.cpp  metropolis.hpp
src/fqhe_entanglement_wave_function_method/metropolis/.deps/: metropolis.Po
src/fqhe_entanglement_wave_function_method/wave_functions/: wave_functions.cpp  wave_functions.hpp
src/fqhe_entanglement_wave_function_method/wave_functions/.deps/: wave_functions.Po
src/fqhe_pseudo_reduced_density_matrix_method/: file_name_generator.hpp  program_options.hpp
src/fqhe_pseudo_reduced_density_matrix_method/main/: fqhe_entanglement_spectrum.cpp
src/fqhe_pseudo_reduced_density_matrix_method/main/.deps/: fqhe_entanglement_spectrum.Po
src/fqhe_wave_function_algorithms/: Makefile.am  composite_fermion.cpp  composite_fermion.hpp  fqhe_wave_function.cpp  fqhe_wave_function.hpp  laughlin.cpp  laughlin.hpp  moore_read.cpp  moore_read.hpp  nass.cpp  nass.hpp  parafermion.cpp  parafermion.hpp
src/fqhe_wave_function_algorithms/.deps/: composite_fermion.Po  fqhe_wave_function.Po  laughlin.Po  moore_read.Po  nass.Po  parafermion.Po
src/fqhe_wave_function_monte_carlo/analysis/: fqhe_monte_carlo_analysis.cpp  fqhe_monte_carlo_analysis.hpp
src/fqhe_wave_function_monte_carlo/analysis/.deps/: fqhe_monte_carlo_analysis.Po
src/fqhe_wave_function_monte_carlo/main/: analyse_monte_carlo.cpp  edge_mode_inner_products.cpp  fqhe_monte_carlo.cpp
src/fqhe_wave_function_monte_carlo/main/.deps/: analyse_monte_carlo.Po  edge_mode_inner_products.Po  fqhe_monte_carlo.Po
src/fqhe_wave_function_monte_carlo/metropolis/: fqhe_metropolis.cpp  fqhe_metropolis.hpp
src/fqhe_wave_function_monte_carlo/metropolis/.deps/: fqhe_metropolis.Po
src/iqhe_exact_entanglement_spectrum/iqhe_rses/: iqhe_rses.cpp  iqhe_rses.hpp  nu_1_analytic.hpp
src/iqhe_exact_entanglement_spectrum/iqhe_rses/.deps/: iqhe_rses.Po
src/iqhe_exact_entanglement_spectrum/main/: iqhe_entanglement_spectrum.cpp
src/iqhe_exact_entanglement_spectrum/main/.deps/: iqhe_entanglement_spectrum.Po
src/occupation_basis/: occupation_basis.cpp  occupation_basis.hpp
src/occupation_basis/.deps/: occupation_basis.Po
src/program_options/: general_options.hpp  rses_options.hpp
src/python/: gen_doc_conf.py
src/python/entanglement_spectrum_fitting/: fit_entanglement_spectrum.py  fitting_model_processing.py  plot_iqhe_rses.py  rses_data_processing.py
src/python/utilities/: curve_fitting.py  plot_utilities.py
src/utilities/algorithms/: quick_sort.hpp
src/utilities/general/: cout_tools.hpp  dcmplx_type_def.hpp  debug.hpp  i_const_def.hpp  load_bar.hpp  pi_const_def.hpp  run_script.hpp  template_tools.hpp  timer.hpp
src/utilities/mathematics/: binary_number_tools.cpp  binary_number_tools.hpp  binomial_table.cpp  binomial_table.hpp  binomials.cpp  binomials.hpp  combinatorics.hpp  dense_linear_algebra.hpp  integer_partitions.cpp  integer_partitions.hpp  kahan_arithmetic.hpp  mt.cpp  mt.hpp  murmur_hash2.cpp  murmur_hash2.hpp  murmur_hash3.cpp  murmur_hash3.hpp  theta_functions.cpp  theta_functions.hpp
src/utilities/mathematics/.deps/: binary_number_tools.Po  binomial_table.Po  binomials.Po  integer_partitions.Po  mt.Po  murmur_hash2.Po  murmur_hash3.Po  theta_functions.Po
src/utilities/wrappers/: fftw_wrapper.cpp  fftw_wrapper.hpp  high_precision_wrapper.hpp  io_wrapper.hpp  lapack_wrapper.hpp  mpi_wrapper.cpp  mpi_wrapper.hpp  mt_wrapper.cpp  mt_wrapper.hpp  murmur_hash_wrapper.hpp
(+137 files in other folders)
